# autonomous-trading-agent

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: risk.yaml  settings.yaml
config/strategies/: breakout.yaml  mean_reversion.yaml  momentum.yaml
data/cache_history/: AAPL__1Day.pkl  ABBV__1Day.pkl  ADBE__1Day.pkl  AMAT__1Day.pkl  AMD__1Day.pkl  AMGN__1Day.pkl  AMZN__1Day.pkl  AVGO__1Day.pkl  AXP__1Day.pkl  BAC__1Day.pkl  BA__1Day.pkl  CAT__1Day.pkl  CMCSA__1Day.pkl  COP__1Day.pkl  COST__1Day.pkl  CRM__1Day.pkl  CSCO__1Day.pkl  CVX__1Day.pkl  C__1Day.pkl  DE__1Day.pkl  DIS__1Day.pkl  DUK__1Day.pkl  FCX__1Day.pkl  GE__1Day.pkl  GILD__1Day.pkl  GOOGL__1Day.pkl  GS__1Day.pkl  HD__1Day.pkl  HON__1Day.pkl  INTC__1Day.pkl  IWM__1Day.pkl  JNJ__1Day.pkl  JPM__1Day.pkl  KMI__1Day.pkl  KO__1Day.pkl  LIN__1Day.pkl  LOW__1Day.pkl  MCD__1Day.pkl  META__1Day.pkl  MRK__1Day.pkl  (+30 more)
src/: main.py
src/backtest/: engine.py
src/core/: config.py  event_bus.py  models.py  validate.py
src/dashboard/: app.py
src/data/: cache.py  features.py  feed.py  history_feed.py  quality.py  scanner.py  store.py
src/decision/: engine.py
src/execution/: base.py  broker.py  factory.py  order_manager.py  paper_broker.py
src/monitoring/: alerts.py  analyst.py  dashboard.py
src/ops/: healthcheck.py  watchdog.py
src/research/: backtest.py  drift.py  experiment.py  metrics.py  optimize.py  universe.py  walkforward.py
src/risk/: manager.py  portfolio.py  stops.py
src/strategy/: base.py  breakout.py  ensemble.py  mean_reversion.py  ml_classifier.py  momentum.py  xs_momentum.py
tests/: conftest.py  test_analyst.py  test_backtest.py  test_cache.py  test_decision.py  test_drift.py  test_ensemble.py  test_execution.py  test_experiment.py  test_features.py  test_feed.py  test_history_feed.py  test_integration.py  test_momentum_batch.py  test_ops.py  test_optimize.py  test_paper_broker.py  test_persistence.py  test_portfolio_risk.py  test_quality.py  test_research.py  test_risk.py  test_stops.py  test_xs_momentum.py
