[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-agent"
version = "0.2.0"
description = "Autonomous AI Trading Agent"
requires-python = ">=3.10"
dependencies = [
    "alpaca-py>=0.21",
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "aiohttp>=3.9",
    "ta>=0.11",
]

[project.scripts]
trading-agent = "src.main:main"

[tool.setuptools.packages.find]
include = ["src*"]
